--- a/app/styles/chess.css
+++ b/app/styles/chess.css
@@ -1,1 +1,31 @@
+/* board */
+#board {
+	margin: auto;
+    width: 625px;
+	height: 625px;
+	background-color: lightcyan;
+}
 
+#board div {
+	width: 100%;
+	height: 12.5%;
+	display: flex;
+}
+
+#board div div {
+	width: 12.5%;
+	height: 100%;
+	display: flex;
+	font-size: 60px;
+	justify-content: center;
+	align-items: center;
+}
+
+#board div:nth-of-type(odd) div:nth-of-type(even), #board div:nth-of-type(even) div:nth-of-type(odd) {
+	background-color: #616161;
+}
+
+.highlight {
+	background-color: lightyellow !important;
+	border: 1px solid black;
+}
